--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-navbar></app-navbar>
 
+<app-variables></app-variables>
+
 
 <app-mensaje [titulo]="'Hola a todos'" [subTitulo]="'Este es un subtitulo'"></app-mensaje>
 <app-mensaje [titulo]="'Hola Mundo'" [subTitulo]="'Este es un subtitulo'"></app-mensaje>
